Fixed spacing and resume page

--- a/css/style.css
+++ b/css/style.css
@@ -782,6 +782,9 @@ h6 {
     padding-left: 10rem;
     padding-right: 10rem;
   }
+  .img-right {
+    padding-right: 5rem;
+  }
   .topspin {
     flex-direction: row;
     padding-left: 10rem;
